--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,9 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "main.ts",
-      "use": "@vercel/node"
-    }
-  ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "main.ts"
+      "dest": "dist/main.js"
     }
   ]
 }
