--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
+  "builds": [
+    { "src": "api/index.ts", "use": "@vercel/node" }
+  ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/main.js"
-    }
+    { "src": "/(.*)", "dest": "api/index.ts" }
   ]
 }
