--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,3 +1,7 @@
 {
-  "version": 2
+  "version": 2,
+  "routes": [
+    { "src": "/", "dest": "/api" },
+    { "src": "/(.*)", "dest": "/api" }
+  ]
 }
