--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -35,7 +35,9 @@
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-            ]
+            ],
+              "baseHref": "/"
+
           },
           "configurations": {
             "production": {
